fixed error (preparing for UI)

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 {
     "config_type": "BEE2.4 Manipulator Config File",
     "": "",
-    "appVersion": "0.3"
+    "appVersion": "0.3",
     "last_version": "true"
 }
