--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ __pycache__/config.cpython-37.pyc
 __pycache__/web.cpython-37.pyc
 .pytest_cache/v/cache/nodeids
 .pytest_cache/v/cache/stepwise
+
+.venv
+.venv/.project
