make config.py working properly

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,5 @@
 {
-    "config_type": "BEE2.4 Manipulator Config File",
-    "": "",
-    "appVersion": "0.3",
-    "last_version": "true"
+   "config_type": "BEE2.4 Manipulator Config File",
+   "appVersion": "0.3",
+   "last_version": "false"
 }
