--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,15 @@
 language: python
+python: 3.7
+jobs:
+  include:
+    - name: "Python 3.7.4 on Windows"
+      os: windows           # Windows 10.0.17134 N/A Build 17134
+      language: shell       # 'language: python' is an error on Travis CI Windows
+      before_install:
+      - python -m pip install --upgrade pip
+install:
+  - pip3 install --upgrade pip
+  - pip install pipenv
+  - pipenv sync
+script:
+  - pipenv run pyinstaller main.py
