--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ jobs:
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
-      - python -m pip install --upgrade pip
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python37-32:/c/Python37-32/Scripts:$PATH
 install:
   - pip3 install --upgrade pip
   - pip install pipenv
