--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,6 @@
 {
    "config_type": "BEE2.4 Manipulator Config File",
    "appVersion": "0.3",
-   "last_version": "false"
+   "latestAppVersion": "true",
+   "enableBee2Preleases": "false"
 }
