trying to insert an icon

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ pypresence = "*"
 pillow = "*"
 pyinstaller = "*"
 pytest = "*"
-srctools = "*"
+cython = "*"
 
 [requires]
 python_version = "3.7"
