added function to check if specific options exist

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,8 @@
 {
    "config_type": "BEE2.4 Manipulator Config File",
    "appVersion": "0.1",
-   "latestAppVersion": "true",
-   "enableBee2Preleases": "false"
+   "last_version": "false",
+   "enableBee2Prereleases": "false",
+   "steamDir": "None",
+   "portal2Dir": "None"
 }
