rewrited from scratch beeManager part 1

--- a/config.cfg
+++ b/config.cfg
@@ -2,7 +2,8 @@
    "config_type": "BEE2.4 Manipulator Config File",
    "appVersion": "0.1",
    "last_version": "false",
-   "enableBee2Prereleases": "false",
+   "beePrereleases": "false",
+   "beeUpdateUrl": "Null",
    "steamDir": "None",
    "portal2Dir": "None"
 }
