--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ __pycache__/ucpParser.cpython-37.pyc
 __pycache__/beeManager.cpython-37.pyc
 __pycache__/config.cpython-37.pyc
 __pycache__/web.cpython-37.pyc
+srctools/__pycache__/*
+srctools/__pycache__/
 .pytest_cache/v/cache/nodeids
 .pytest_cache/v/cache/stepwise
 
