--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 {
    "config_type": "BEE2.4 Manipulator Config File",
    "appVersion": "0.1",
-   "last_version": "false",
+   "lastVersion": "false",
    "beePrereleases": "false",
    "beeUpdateUrl": "Null",
    "steamDir": "None",
