removed useless stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,19 @@
-
 .vscode/settings.json
 .vscode/launch.json
-__pycache__/ucpParser.cpython-37.pyc
-__pycache__/beeManager.cpython-37.pyc
-__pycache__/config.cpython-37.pyc
-__pycache__/web.cpython-37.pyc
-__pycache__/richPresence.cpython-37.pyc
 __pycache__/*
 __pycache__/*.pyc
 __pycache__/
+__pycache__
 srctools/__pycache__/*
 srctools/__pycache__/
+srctools/__pycache__
 .pytest_cache/v/cache/nodeids
 .pytest_cache/v/cache/stepwise
+.pytest_cache/v/cache/lastfailed
+.pytest_cache
 .venv/*
 .venv/.project
 .venv
-
 *.pyc
 docs/~$BM_ui.pptx
-.pytest_cache/v/cache/lastfailed
+
