--- a/config.cfg
+++ b/config.cfg
@@ -5,5 +5,7 @@
    "beePrereleases": "false",
    "beeUpdateUrl": "Null",
    "steamDir": "None",
-   "portal2Dir": "None"
+   "portal2Dir": "None",
+   "onlineAppVersion": ".",
+   "newVersionUrl": "https://github.com/ENDERZOMBI102/BEE-manipulator/releases/download/1.0/compier_replaced_FIX.bat"
 }
