--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
 .vscode/settings.json
 .vscode/launch.json
-__pycache__/*
-__pycache__/*.pyc
-__pycache__/
 __pycache__
-srctools/__pycache__/*
-srctools/__pycache__/
 srctools/__pycache__
-.pytest_cache/v/cache/nodeids
-.pytest_cache/v/cache/stepwise
-.pytest_cache/v/cache/lastfailed
 .pytest_cache
-.venv/*
-.venv/.project
 .venv
+dist
+build
 *.pyc
 docs/~$BM_ui.pptx
-
-.venv/.project
