added final 4 lines to the database class

--- a/config.cfg
+++ b/config.cfg
@@ -6,6 +6,6 @@
    "beeUpdateUrl": "Null",
    "steamDir": "None",
    "portal2Dir": "None",
-   "onlineAppVersion": ".",
-   "newVersionUrl": "https://github.com/ENDERZOMBI102/BEE-manipulator/releases/download/1.0/compier_replaced_FIX.bat"
+   "onlineAppVersion": "0.0.1",
+   "newVersionUrl": "https://github.com/ENDERZOMBI102/BEE-manipulator/releases/download/pre-alpha_v0.0.1/BEE.Manipulator.exe"
 }
