now BM recognize that its frozen or not now BM uses the assets path based on being frozen

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@ BEEManipulator.7z
 activityManager/.vs
 activityManager/Debug
 activityManager/x64
-src/assets/database.json
-src/assets/about.html
+assets/database.json
+assets/about.html
 src/config.cfg
 src/logs
-src/assets/packages
+assets/packages
 /src/.env
 /zip.bat
