--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: windows
 language: python
 python:
   - "3.7.8"
@@ -7,8 +8,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - python devtool.py --build --release
-  - zip /dist/BEE Manipulator
+  - python devtool.py --build --release --zip
 # publish release 
 deploy:
   provider: releases
