--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,12 +30,8 @@ jobs:
         pip install pyinstaller --no-input
     - name: Build bm
       run: |
-        dir %upx%
-        pyinstaller src/BEEManipulator_release.spec --noconfirm --upx-dir=%upx%
-        %7z% a -r BEEManipulator ./dist/"BEE Manipulator"/*
-      env:
-        7z: C:\ProgramData\chocolatey\lib\7zip.portable\tools\7z-extra.exe
-        upx: C:\ProgramData\chocolatey\lib\upx\tools
+        pyinstaller src/BEEManipulator_release.spec --noconfirm --upx-dir="C:\ProgramData\chocolatey\lib\upx\tools"
+        C:\ProgramData\chocolatey\lib\7zip.portable\tools\7z-extra.exe a -r BEEManipulator ./dist/"BEE Manipulator"/*
     - name: Upload release
       run: |
         echo hi
