--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Build BM
 
 on:
   workflow_dispatch
@@ -15,8 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: install 7zip and UPX
       run: |
-        choco install 7zip.portable
-        choco install upx
+        choco install 7zip.portable upx
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
@@ -30,8 +29,9 @@ jobs:
         pip install pyinstaller --no-input
     - name: Build bm
       run: |
+        dir C:\ProgramData\chocolatey\lib\upx\tools
         pyinstaller src/BEEManipulator_release.spec --noconfirm --upx-dir="C:\ProgramData\chocolatey\lib\upx\tools"
-        C:\ProgramData\chocolatey\lib\7zip.portable\tools\7z-extra.exe a -r BEEManipulator ./dist/"BEE Manipulator"/*
+        C:\ProgramData\chocolatey\lib\7zip.portable\tools\7z-extra\7za.exe a -r BEEManipulator ./dist/"BEE Manipulator"/*
     - name: Upload release
       run: |
         echo hi
