--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,9 +13,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Cache
+      id: cache
+      uses: actions/cache@v2.1.3
+      with:
+        # A list of files, directories, and wildcard patterns to cache and restore
+        path: C:\ProgramData\chocolatey\lib
+        # An explicit key for restoring and saving the cache
+        key: progs
+        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+        restore-keys: progs
     - name: install 7zip and UPX
-      run: |
-        choco install 7zip.portable upx
+      # install the progs only if the cache doesn't exist
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: choco install 7zip.portable upx
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
