--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,11 +21,20 @@ jobs:
       uses: actions/cache@v2.1.3
       with:
         # A list of files, directories, and wildcard patterns to cache and restore
-        path: C:\ProgramData\chocolatey\lib
+        path: |
+          C:\ProgramData\chocolatey\lib\upx
+          C:\ProgramData\chocolatey\lib\7zip.portable
         # An explicit key for restoring and saving the cache
         key: progs
         # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
         restore-keys: progs
+    - name: cache-pip
+      id: cache-pip
+      uses: actions/cache@v2
+      with:
+        path: ${{ appdata }}\pip\Cache
+        key: windows-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: windows-pip-
     - name: install 7zip and UPX
       # install the progs only if the cache doesn't exist
       if: steps.cache.outputs.cache-hit != 'true'
@@ -35,6 +44,7 @@ jobs:
       with:
         python-version: 3.7
     - name: Install dependencies
+      if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install wheel --no-input
