--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,9 +4,9 @@
 name: Build BM
 
 on:
-  release:
-    types:
-      - created
+  #release:
+  #  types:
+  #    - created
   workflow_dispatch:
 
 jobs:
