--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ future>=0.18.2
 markdown2>=2.3.10
 pypresence>=4.0.0
 requests>=2.25.0
-wxPython>=4.1.0
-psutil>=5.7.3
-pydantic>=1.7.2
+wxPython>=4.1.1
+pydantic>=1.7.3
 semver>=2.13.0
+SQLAlchemy~=1.4.0b1
