--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
     name = 'Portal Toolkit'
     version = '0.1.0'
-    description = ''
+    description = 'A modular and pluggable set of tools for the games of the Portal series'
     authors = [ 'ENDERZOMBI102 <enderzombi102.end@gmail.com>' ]
     readme = 'README.md'
-    packages = [{ include = 'bee_manipulator' }]
+    packages = [{ include = 'ptok' }]
 
 [tool.poetry.dependencies]
     python = '>=3.11,<3.12'
@@ -14,6 +14,7 @@
     semver = '^3.0.1'
     pyside6 = '^6.5.1.1'
     icespringpysidestubs-pyside6 = '^1.3.1'
+    srctools = '^2.3.12'
 
 
 [build-system]
