--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,13 @@
     pyside6 = '^6.5.1.1'
     icespringpysidestubs-pyside6 = '^1.3.1'
     srctools = '^2.3.12'
+    tomlkit = '^0.11.8'
+    beartype = '^0.14.1'
+    pydantic = '^1.10.9'
 
+[tool.poetry.group.dev.dependencies]
+    pyinstaller = '^5.12.0'
+    mypy = '^1.3.0'
 
 [build-system]
     requires = [ 'poetry-core' ]
