--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@
     semver = '^3.0.1'
     pyside6 = '^6.5.1.1'
     icespringpysidestubs-pyside6 = '^1.3.1'
-    srctools = '^2.3.12'
     tomlkit = '^0.11.8'
     beartype = '^0.14.1'
     pydantic = '^1.10.9'
+    srctools = { git = 'https://github.com/TeamSpen210/srctools.git' }
 
 [tool.poetry.group.dev.dependencies]
     pyinstaller = '^5.12.0'
